--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.9
+      - name: Install os packages
+        run: |
+          sudo apt-get install -y xsel
       - name: Install poetry
         uses: snok/install-poetry@v1.0.0
         with:
